updated map_xs to use tmap v3.99+

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,17 +187,23 @@ importFrom(terra,vect)
 importFrom(terrainr,get_tiles)
 importFrom(testthat,expect_true)
 importFrom(tidyr,gather)
+importFrom(tmap,opt_tm_text)
 importFrom(tmap,tm_add_legend)
 importFrom(tmap,tm_borders)
 importFrom(tmap,tm_compass)
 importFrom(tmap,tm_layout)
+importFrom(tmap,tm_legend)
 importFrom(tmap,tm_lines)
+importFrom(tmap,tm_pos_out)
 importFrom(tmap,tm_raster)
 importFrom(tmap,tm_rgb)
 importFrom(tmap,tm_scale_bar)
+importFrom(tmap,tm_scale_continuous)
+importFrom(tmap,tm_scalebar)
 importFrom(tmap,tm_shape)
 importFrom(tmap,tm_symbols)
 importFrom(tmap,tm_text)
+importFrom(tmap,tm_title_out)
 importFrom(tmap,tmap_grob)
 importFrom(utils,head)
 importFrom(utils,tail)
