updated map_reach_metric to tmap 4

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -199,6 +199,7 @@ importFrom(tmap,tm_raster)
 importFrom(tmap,tm_rgb)
 importFrom(tmap,tm_scale_bar)
 importFrom(tmap,tm_scale_continuous)
+importFrom(tmap,tm_scale_intervals)
 importFrom(tmap,tm_scalebar)
 importFrom(tmap,tm_shape)
 importFrom(tmap,tm_symbols)
