fixed R CMD Check errors

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fluvgeo
 Title: A Package for Fluvial Geomorphic Analysis
-Version: 0.1.52
+Version: 0.1.53
 Authors@R: c(
     person("Michael", "Dougherty", 
            email = "Michael.P.Dougherty@usace.army.mil", 
@@ -25,7 +25,7 @@ Description: This package contains a wide range of functions for performing
     stream channel dimensions, help choose bankfull elevation for ungaged 
     streams).
 License: file LICENSE
-URL: https://github.com/mpdougherty/fluvgeo
+URL: https://github.com/FluvialGeomorph/fluvgeo
 BugReports: https://github.com/FluvialGeomorph/fluvgeo/issues
 Depends: R (>= 2.10)
 Encoding: UTF-8
@@ -36,7 +36,6 @@ Suggests:
     pander
 VignetteBuilder: knitr
 Imports: 
-    arcgisbinding,
     assertthat,
     conicfit,
     dplyr,
@@ -46,7 +45,6 @@ Imports:
     gridExtra,
     gtable,
     magrittr,
-    methods,
     Metrics,
     mapboxapi,
     patchwork,
@@ -60,7 +58,6 @@ Imports:
     scales,
     sf,
     stats,
-    stringr,
     terra,
     terrainr,
     testthat,
