--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(assertthat,assert_that)
 importFrom(conicfit,CircleFitByTaubin)
 importFrom(conicfit,calculateCircle)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,.data)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
@@ -119,8 +120,11 @@ importFrom(ggplot2,unit)
 importFrom(ggplot2,vars)
 importFrom(ggrepel,geom_text_repel)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,dev.new)
+importFrom(grDevices,dev.off)
 importFrom(grDevices,gray.colors)
 importFrom(grDevices,grey.colors)
+importFrom(grDevices,pdf.options)
 importFrom(grid,gpar)
 importFrom(grid,grid.draw)
 importFrom(grid,grobHeight)
