--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Description: This package contains a wide range of functions for performing
     stream channel dimensions, help choose bankfull elevation for ungaged 
     streams).
 License: file LICENSE
-URL: https://github.com/FluvialGeomorph/fluvgeo
+URL: https://github.com/FluvialGeomorph/fluvgeo, https://fluvialgeomorph.github.io/fluvgeo/
 BugReports: https://github.com/FluvialGeomorph/fluvgeo/issues
 Depends: R (>= 2.10)
 Encoding: UTF-8
