--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,11 +45,16 @@ export(planform)
 export(planform_dimensions)
 export(reach_rhg_graph)
 export(sf2csv)
+export(sf_line_end_point)
+export(sf_line_reverse)
+export(sf_point_attributes)
 export(shear_stress)
 export(slope_sinuosity)
+export(start_left)
 export(stream_power)
 export(table_xs_dimensions)
 export(xs2pts)
+export(xs_bearing)
 export(xs_compare_plot_L1)
 export(xs_compare_plot_L2)
 export(xs_dimensions)
@@ -63,6 +68,7 @@ export(xs_metrics_plot_L3)
 export(xs_plot)
 export(xs_profile_plot)
 export(xs_regional_metrics)
+export(xs_upstream)
 importFrom(Metrics,mae)
 importFrom(Metrics,rmse)
 importFrom(RegionalCurve,RHG)
@@ -73,7 +79,9 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,.data)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,case_when)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
@@ -83,6 +91,7 @@ importFrom(dplyr,last)
 importFrom(dplyr,lead)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,one_of)
 importFrom(dplyr,recode)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
@@ -151,10 +160,15 @@ importFrom(scales,rescale)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_bbox)
+importFrom(sf,st_cast)
+importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_geometry)
+importFrom(sf,st_line_sample)
 importFrom(sf,st_read)
+importFrom(sf,st_reverse)
+importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
 importFrom(sf,st_transform)
 importFrom(stats,aggregate)
@@ -173,6 +187,7 @@ importFrom(terra,terrain)
 importFrom(terra,vect)
 importFrom(terrainr,get_tiles)
 importFrom(testthat,expect_true)
+importFrom(tibble,as_tibble)
 importFrom(tidyr,gather)
 importFrom(tmap,opt_tm_text)
 importFrom(tmap,tm_add_legend)
