document new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(check_channel_feature)
 export(check_cross_section)
 export(check_cross_section_dimensions)
 export(check_cross_section_points)
+export(check_crs_3857)
 export(check_features)
 export(check_flowline)
 export(check_flowline_points)
@@ -19,14 +20,23 @@ export(check_valleyline_points)
 export(check_xs_dims)
 export(compare_long_profile)
 export(compare_xs_long_profile)
+export(cross_section)
 export(cross_section_dimensions_L1)
 export(cross_section_dimensions_L2)
+export(cross_section_points)
+export(dem2rem)
 export(estimate_bankfull)
 export(fc2sf)
 export(fig_xs_profiles_L1)
 export(fig_xs_profiles_L2)
+export(flowline)
 export(flowline_metrics)
+export(flowline_points)
 export(gdb_raster2SpatRast)
+export(get_dem)
+export(get_leaflet)
+export(get_results_leaflet)
+export(get_terrain_leaflet)
 export(gof_graph)
 export(justify_gtable)
 export(level_1_report)
@@ -45,6 +55,8 @@ export(planform)
 export(planform_dimensions)
 export(reach_rhg_graph)
 export(sf2csv)
+export(sf_fix_crs)
+export(sf_get_z)
 export(sf_line_end_point)
 export(sf_line_reverse)
 export(sf_point_attributes)
@@ -72,6 +84,11 @@ export(xs_upstream)
 importFrom(Metrics,mae)
 importFrom(Metrics,rmse)
 importFrom(RegionalCurve,RHG)
+importFrom(arcgislayers,arc_open)
+importFrom(arcgislayers,arc_raster)
+importFrom(arcgisutils,arc_token)
+importFrom(arcgisutils,auth_client)
+importFrom(arcgisutils,set_arc_token)
 importFrom(assertthat,assert_that)
 importFrom(conicfit,CircleFitByTaubin)
 importFrom(conicfit,calculateCircle)
@@ -86,6 +103,7 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
+importFrom(dplyr,join_by)
 importFrom(dplyr,lag)
 importFrom(dplyr,last)
 importFrom(dplyr,lead)
@@ -93,6 +111,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,one_of)
 importFrom(dplyr,recode)
+importFrom(dplyr,rename)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
@@ -144,12 +163,29 @@ importFrom(gridExtra,ttheme_default)
 importFrom(gtable,gtable)
 importFrom(gtable,gtable_add_grob)
 importFrom(gtable,gtable_add_rows)
+importFrom(leafem,addMouseCoordinates)
+importFrom(leafem,updateLayersControl)
+importFrom(leaflegend,addLegendNumeric)
+importFrom(leaflet,addLabelOnlyMarkers)
+importFrom(leaflet,addLayersControl)
+importFrom(leaflet,addMeasure)
+importFrom(leaflet,addPolylines)
+importFrom(leaflet,addProviderTiles)
+importFrom(leaflet,addRasterImage)
+importFrom(leaflet,addScaleBar)
+importFrom(leaflet,colorNumeric)
+importFrom(leaflet,labelOptions)
+importFrom(leaflet,leaflet)
+importFrom(leaflet,setView)
+importFrom(leaflet.extras,addSearchOSM)
+importFrom(leaflet.extras,searchOptions)
 importFrom(magrittr,"%>%")
 importFrom(patchwork,plot_layout)
 importFrom(patchwork,plot_spacer)
 importFrom(patchwork,wrap_elements)
 importFrom(purrr,discard)
 importFrom(purrr,map)
+importFrom(rLFT,addMValues)
 importFrom(raster,pointDistance)
 importFrom(readr,write_csv)
 importFrom(reshape2,melt)
@@ -160,17 +196,26 @@ importFrom(scales,rescale)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_bbox)
+importFrom(sf,st_buffer)
 importFrom(sf,st_cast)
+importFrom(sf,st_centroid)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_geometry)
 importFrom(sf,st_line_sample)
+importFrom(sf,st_nearest_feature)
+importFrom(sf,st_nearest_points)
 importFrom(sf,st_read)
 importFrom(sf,st_reverse)
+importFrom(sf,st_set_crs)
 importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
+importFrom(sf,st_sfc)
 importFrom(sf,st_transform)
+importFrom(sf,st_within)
+importFrom(sf,st_zm)
+importFrom(smoothr,densify)
 importFrom(stats,aggregate)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
@@ -180,10 +225,16 @@ importFrom(stats,predict)
 importFrom(stats,setNames)
 importFrom(terra,crop)
 importFrom(terra,distance)
+importFrom(terra,extract)
+importFrom(terra,focal)
+importFrom(terra,interpIDW)
 importFrom(terra,linearUnits)
+importFrom(terra,minmax)
+importFrom(terra,project)
 importFrom(terra,rast)
 importFrom(terra,shade)
 importFrom(terra,terrain)
+importFrom(terra,values)
 importFrom(terra,vect)
 importFrom(terrainr,get_tiles)
 importFrom(testthat,expect_true)
