--- a/NAMESPACE
+++ b/NAMESPACE
@@ -217,6 +217,8 @@ importFrom(sf,st_transform)
 importFrom(sf,st_within)
 importFrom(sf,st_zm)
 importFrom(smoothr,densify)
+importFrom(stars,st_as_stars)
+importFrom(stars,st_extract)
 importFrom(stats,aggregate)
 importFrom(stats,approxfun)
 importFrom(stats,integrate)
@@ -235,6 +237,7 @@ importFrom(terra,project)
 importFrom(terra,rast)
 importFrom(terra,shade)
 importFrom(terra,terrain)
+importFrom(terra,tighten)
 importFrom(terra,values)
 importFrom(terra,vect)
 importFrom(terrainr,get_tiles)
