refactored dem2rem to detrend to return both an rem and trend

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,7 +25,7 @@ export(cross_section)
 export(cross_section_dimensions_L1)
 export(cross_section_dimensions_L2)
 export(cross_section_points)
-export(dem2rem)
+export(detrend)
 export(estimate_bankfull)
 export(fc2sf)
 export(fig_xs_profiles_L1)
