--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(estimate_bankfull)
 export(fc2sf)
 export(fig_xs_profiles_L1)
 export(fig_xs_profiles_L2)
+export(floodplain_volume)
 export(flowline)
 export(flowline_metrics)
 export(flowline_points)
@@ -213,6 +214,7 @@ importFrom(sf,st_set_crs)
 importFrom(sf,st_set_geometry)
 importFrom(sf,st_sf)
 importFrom(sf,st_sfc)
+importFrom(sf,st_simplify)
 importFrom(sf,st_transform)
 importFrom(sf,st_within)
 importFrom(sf,st_zm)
@@ -230,9 +232,11 @@ importFrom(terra,crop)
 importFrom(terra,distance)
 importFrom(terra,extract)
 importFrom(terra,focal)
+importFrom(terra,ifel)
 importFrom(terra,interpIDW)
 importFrom(terra,linearUnits)
 importFrom(terra,minmax)
+importFrom(terra,not.na)
 importFrom(terra,project)
 importFrom(terra,rast)
 importFrom(terra,shade)
