--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(get_leaflet)
 export(get_results_leaflet)
 export(get_terrain_leaflet)
 export(gof_graph)
+export(hydroflatten_dem)
 export(justify_gtable)
 export(level_1_report)
 export(level_1_report_b)
@@ -67,6 +68,7 @@ export(slope_sinuosity)
 export(start_left)
 export(stream_power)
 export(table_xs_dimensions)
+export(water_surface_poly)
 export(xs2pts)
 export(xs_bearing)
 export(xs_compare_plot_L1)
@@ -81,6 +83,7 @@ export(xs_metrics_plot_L2)
 export(xs_metrics_plot_L3)
 export(xs_plot)
 export(xs_profile_plot)
+export(xs_pts_classify)
 export(xs_regional_metrics)
 export(xs_upstream)
 importFrom(Metrics,mae)
@@ -205,6 +208,7 @@ importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_geometry)
+importFrom(sf,st_intersects)
 importFrom(sf,st_line_sample)
 importFrom(sf,st_nearest_feature)
 importFrom(sf,st_nearest_points)
@@ -228,6 +232,8 @@ importFrom(stats,loess)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,setNames)
+importFrom(terra,as.polygons)
+importFrom(terra,cellSize)
 importFrom(terra,crop)
 importFrom(terra,distance)
 importFrom(terra,extract)
