--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
+importFrom(dplyr,if_else)
 importFrom(dplyr,join_by)
 importFrom(dplyr,lag)
 importFrom(dplyr,last)
@@ -174,6 +175,7 @@ importFrom(leaflegend,addLegendNumeric)
 importFrom(leaflet,addLabelOnlyMarkers)
 importFrom(leaflet,addLayersControl)
 importFrom(leaflet,addMeasure)
+importFrom(leaflet,addPolygons)
 importFrom(leaflet,addPolylines)
 importFrom(leaflet,addProviderTiles)
 importFrom(leaflet,addRasterImage)
@@ -233,8 +235,10 @@ importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,setNames)
 importFrom(terra,as.polygons)
+importFrom(terra,buffer)
 importFrom(terra,cellSize)
 importFrom(terra,crop)
+importFrom(terra,disagg)
 importFrom(terra,distance)
 importFrom(terra,extract)
 importFrom(terra,focal)
@@ -245,6 +249,7 @@ importFrom(terra,minmax)
 importFrom(terra,not.na)
 importFrom(terra,project)
 importFrom(terra,rast)
+importFrom(terra,relate)
 importFrom(terra,shade)
 importFrom(terra,terrain)
 importFrom(terra,tighten)
