added hillshade to get_terrain_leaflet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -240,6 +240,7 @@ importFrom(terra,cellSize)
 importFrom(terra,crop)
 importFrom(terra,disagg)
 importFrom(terra,distance)
+importFrom(terra,ext)
 importFrom(terra,extract)
 importFrom(terra,focal)
 importFrom(terra,ifel)
