added the get_watershed function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(get_dem)
 export(get_leaflet)
 export(get_results_leaflet)
 export(get_terrain_leaflet)
+export(get_watershed)
 export(gof_graph)
 export(hydroflatten_dem)
 export(justify_gtable)
@@ -92,6 +93,7 @@ importFrom(RegionalCurve,RHG)
 importFrom(arcgislayers,arc_open)
 importFrom(arcgislayers,arc_raster)
 importFrom(arcgisutils,arc_token)
+importFrom(arcgisutils,as_esri_featureset)
 importFrom(arcgisutils,auth_client)
 importFrom(arcgisutils,set_arc_token)
 importFrom(assertthat,assert_that)
@@ -169,6 +171,9 @@ importFrom(gridExtra,ttheme_default)
 importFrom(gtable,gtable)
 importFrom(gtable,gtable_add_grob)
 importFrom(gtable,gtable_add_rows)
+importFrom(httr2,req_perform)
+importFrom(httr2,req_url_query)
+importFrom(httr2,request)
 importFrom(leafem,addMouseCoordinates)
 importFrom(leafem,updateLayersControl)
 importFrom(leaflegend,addLegendNumeric)
@@ -214,6 +219,7 @@ importFrom(sf,st_intersects)
 importFrom(sf,st_line_sample)
 importFrom(sf,st_nearest_feature)
 importFrom(sf,st_nearest_points)
+importFrom(sf,st_point)
 importFrom(sf,st_read)
 importFrom(sf,st_reverse)
 importFrom(sf,st_set_crs)
