added pt_watershed_area function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(meander_width)
 export(metric_colors)
 export(planform)
 export(planform_dimensions)
+export(pt_watershed_area)
 export(reach_rhg_graph)
 export(sf2csv)
 export(sf_fix_crs)
@@ -192,6 +193,8 @@ importFrom(leaflet,setView)
 importFrom(leaflet.extras,addSearchOSM)
 importFrom(leaflet.extras,searchOptions)
 importFrom(magrittr,"%>%")
+importFrom(nhdplusTools,get_raindrop_trace)
+importFrom(nhdplusTools,get_split_catchment)
 importFrom(patchwork,plot_layout)
 importFrom(patchwork,plot_spacer)
 importFrom(patchwork,wrap_elements)
