calculated watershed area in pt_watershed_area

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -208,6 +208,7 @@ importFrom(rlang,.data)
 importFrom(rlang,parse_expr)
 importFrom(rmarkdown,render)
 importFrom(scales,rescale)
+importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_bbox)
