added the new pt_watershed_area to calculate watershed area for each xs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -269,6 +269,7 @@ importFrom(terra,vect)
 importFrom(terrainr,get_tiles)
 importFrom(testthat,expect_true)
 importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
 importFrom(tidyr,gather)
 importFrom(tmap,opt_tm_text)
 importFrom(tmap,tm_add_legend)
