resampled input rasters to ensure extents match

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -261,6 +261,7 @@ importFrom(terra,not.na)
 importFrom(terra,project)
 importFrom(terra,rast)
 importFrom(terra,relate)
+importFrom(terra,resample)
 importFrom(terra,shade)
 importFrom(terra,terrain)
 importFrom(terra,tighten)
